<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">AJATT Viewer</string>
    <string name="description_logo"></string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_newest">Newest</string>
    <string name="description_tableOfContents">Table of Contents</string>
    <string name="description_random">Random</string>
    <string name="description_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_newest">Newest</string>
    <string name="title_tableOfContents">Table of Contents</string>
    <string name="title_random">Random</string>
    <string name="title_settings">More from Just Do One More</string>
    <string name="default_intro">Do some stuff.</string>
    <string name="intro_newest">Feature 1 content goes here.</string>
    <string name="intro_lists">Feature 2 content goes here.</string>
    <string name="intro_tableOfContents">Enter the task details:</string>
    <string name="intro_random">Feature 5 content goes here.</string>
    <string name="intro_settings">There are currently no settings for configuration.</string>
    <string name="about_intro">Android viewer for AJATT!</string>
    <string name="search_intro">Search for stuff.</string>
    <string name="separator"></string>
    <string name="listListPrompt">Select the task list:</string>

</resources>