<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/home_btn_newest"
                style="@style/HomeButton"
                android:drawableTop="@drawable/new_post"
                android:onClick="onClickFeature"
                android:text="@string/title_newest" />

            <Button
                android:id="@+id/home_btn_tableOfContents"
                style="@style/HomeButton"
                android:drawableTop="@drawable/table_of_contents"
                android:onClick="onClickFeature"
                android:text="@string/title_tableOfContents" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/home_btn_random"
                style="@style/HomeButton"
                android:drawableTop="@drawable/random"
                android:onClick="onClickFeature"
                android:text="@string/title_random" />

            <Button
                android:id="@+id/home_btn_settings"
                style="@style/HomeButton"
                android:drawableTop="@drawable/more"
                android:onClick="onClickFeature"
                android:text="@string/title_settings" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>